--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^13.3.8",
+    "@angular/cdk": "^13.3.7",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -30,6 +32,13 @@
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
     "@ngrx/store": "^13.2.0",
+    "@taiga-ui/addon-commerce": "^2.45.0",
+    "@taiga-ui/addon-mobile": "^2.45.0",
+    "@taiga-ui/cdk": "^2.45.0",
+    "@taiga-ui/core": "^2.45.0",
+    "@taiga-ui/icons": "^2.45.0",
+    "@taiga-ui/kit": "^2.45.0",
+    "@tinkoff/ng-polymorpheus": "^3.1.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
