--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@taiga-ui/addon-commerce": "^2.45.0",
     "@taiga-ui/addon-mobile": "^2.45.0",
